[ApiSandbox] fix regression from r109726 in some browsers * Use px with px instead of mixed with em. With table cell layout constrains and overflows peaking out of cells, better fix the dimensions with px * Remove unneeded overflow:auto on <td> * Make example/clear button not submit buttons, otherwise $form.submit() is triggered * Use $.inArray instead of Array.proto.indexOf (not supported on older IE) * nodeName case cross-browser (http://ejohn.org/blog/nodename-case-sensitivity/)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@109785 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ApiSandbox/ext.apiSandbox.css
+++ b/ApiSandbox/ext.apiSandbox.css
@@ -22,11 +22,12 @@
 .api-sandbox-options td,
 .api-sandbox-options th {
 	vertical-align: top;
-	width: 13em;
+	padding: 3px 5px;
+	width: 160px;
 }
 
 .api-sandbox-options select {
-	width: 12em;
+	width: 140px;
 }
 
 .api-sandbox-options .api-sandbox-docs-col {
@@ -42,25 +43,23 @@
 
 .api-sandbox-params td,
 .api-sandbox-params th {
-	padding: 5px 7px;
+	vertical-align: top;
+	padding: 5px 10px;
 }
 
 .api-sandbox-params-label {
-	vertical-align: top;
-	width: 12em;
+	width: 150px;
 	text-align: right;
 }
 
 .api-sandbox-params-value {
-	width: 20em;
-	vertical-align: top;
-	overflow: auto;
+	width: 260px;
 }
 
 .api-sandbox-params input[type="text"],
 .api-sandbox-params select {
-	padding: 2px 3px;
-	width: 18em;
+	padding: 3px 5px;
+	width: 225px;
 }
 
 th.api-sandbox-params-label,
